ADD basic file based search index
also tested using sqlite, was slower than just going through the file on disk